# openairinterface-openair-cn

./: .gitignore  .gitmodules  NOTICE  README
common/protobuf/: CMakeLists.txt
common/service303/: CMakeLists.txt  MagmaService.cpp  MagmaService.h  MetricsRegistry.h
common/service_registry/: CMakeLists.txt  ConfigUtils.cpp  ConfigUtils.h  ServiceRegistrySingleton.cpp  ServiceRegistrySingleton.h
src/: CMakeLists.txt  valgrind_mme.supp
src/common/: 3gpp_23.003.h  3gpp_23.401.h  3gpp_24.007.h  3gpp_24.008.c  3gpp_24.008.h  3gpp_24.008_gmm_ies.c  3gpp_24.008_sm_ies.c  3gpp_29.274.h  3gpp_33.401.h  3gpp_36.401.h  3gpp_36.413.h  3gpp_requirements_33.401.h  CMakeLists.txt  asn1_conversions.h  async_system_messages_def.h  async_system_messages_types.h  common_defs.h  common_types.c  common_types.h  gtpv1_u_messages_def.h  gtpv1_u_messages_types.h  ip_forward_messages_def.h  ip_forward_messages_types.h  itti_free_defined_msg.c  messages_def.h  messages_types.h  mme_app_messages_def.h  mme_app_messages_types.h  mme_default_values.h  nas_messages_def.h  nas_messages_types.h  s11_messages_def.h  s11_messages_types.h  s1ap_messages_def.h  s1ap_messages_types.h  s6a_messages_def.h  s6a_messages_types.h  sctp_messages_def.h  sctp_messages_types.h  security_types.h  (+4 more)
src/common/itti/: intertask_interface.c  intertask_interface_init.h  memory_pools.c  signals.c  tasks_def.h  timer.c  timer.h  timer_messages_def.h
src/common/itti_analyzer/: filters_mme.xml
src/common/message_utils/: service303_message_utils.c  service303_message_utils.h
src/gtpv1-u/: CMakeLists.txt  gtp_tunnel_libgtpnl.c  gtp_tunnel_openflow.c  gtpv1u.h  gtpv1u_sgw_defs.h  gtpv1u_task.c  gtpv1u_teid_pool.c
src/gtpv2-c/: CMakeLists.txt
src/hss_rel14/src/: resthandler.cpp  s6as6d_impl.cpp
src/mme_app/: CMakeLists.txt  mme_app_apn_selection.c  mme_app_apn_selection.h  mme_app_bearer.c  mme_app_bearer_context.c  mme_app_bearer_context.h  mme_app_capabilities.c  mme_app_context.c  mme_app_defs.h  mme_app_detach.c  mme_app_edns_emulation.c  mme_app_edns_emulation.h  mme_app_embedded_spgw.c  mme_app_embedded_spgw.h  mme_app_esm_procedures.h  mme_app_extern.h  mme_app_if.h  mme_app_if_nas_transport.c  mme_app_itti_messaging.c  mme_app_itti_messaging.h  mme_app_location.c  mme_app_main.c  mme_app_pdn_context.c  mme_app_pdn_context.h  mme_app_procedures.c  mme_app_procedures.h  mme_app_session_context.c  mme_app_sgw_selection.c  mme_app_sgw_selection.h  mme_app_statistics.c  mme_app_statistics.h  mme_app_transport.c  mme_app_ue_context.c  mme_app_ue_context.h  mme_config.c  mme_config.h  s6a_2_nas_cause.c
src/nas/: 3gpp_24.301.h  3gpp_requirements_24.301.h  CMakeLists.txt  commonDef.h  nas_defs.h  nas_itti_messaging.c  nas_itti_messaging.h  nas_mme_task.c  nas_network.c  nas_network.h  nas_proc.c  nas_proc.h  nas_procedures.c  nas_procedures.h  networkDef.h  securityDef.h
src/nas/emm/: Attach.c  Authentication.c  Detach.c  EmmCommon.c  EmmInformation.c  EmmStatusHdl.c  Identification.c  LowerLayer.c  LowerLayer.h  SecurityModeControl.c  emmData.h  (+12 more)
src/oai_hss/: hss_main.c
src/oai_mme/: oai_mme.c  oai_mme_log.c
src/oai_sgw/: CMakeLists.txt  oai_sgw.c
src/s10/: CMakeLists.txt  s10_ie_formatter.c  s10_ie_formatter.h  s10_mme_task.c
src/s11/: CMakeLists.txt  s11_ie_formatter.c  s11_ie_formatter.h  s11_mme.h  s11_mme_bearer_manager.c  s11_mme_bearer_manager.h  s11_mme_session_manager.c  s11_mme_session_manager.h  s11_mme_task.c  s11_sgw.c  s11_sgw_bearer_manager.c  s11_sgw_bearer_manager.h  s11_sgw_session_manager.c  s11_sgw_session_manager.h
src/s1ap/: 3gpp_requirements_36.413.h  CMakeLists.txt  s1ap_common.c  s1ap_common.h  s1ap_handover_signaling_handler.c  s1ap_handover_signaling_handler.h  s1ap_mme.c  s1ap_mme.h  s1ap_mme_decoder.c  s1ap_mme_decoder.h  s1ap_mme_encoder.c  s1ap_mme_encoder.h  s1ap_mme_handlers.c  s1ap_mme_handlers.h  s1ap_mme_itti_messaging.c  s1ap_mme_itti_messaging.h  s1ap_mme_nas_procedures.c  s1ap_mme_nas_procedures.h  s1ap_mme_retransmission.c  s1ap_mme_retransmission.h  s1ap_mme_ta.c  s1ap_mme_ta.h
src/s6a/: CMakeLists.txt  s6a_auth_info.c  s6a_cancel_loc.c  s6a_clear_loc.c  s6a_defs.h  s6a_dict.c  s6a_error.c  s6a_messages.h  s6a_peer.c  s6a_reset.c  s6a_service_handler.c  s6a_service_handler.h  s6a_subscription_data.c  s6a_task.c  s6a_up_loc.c
src/sctp/: CMakeLists.txt  sctp_common.c  sctp_common.h  sctp_itti_messaging.c  sctp_itti_messaging.h  sctp_primitives_client.c  sctp_primitives_client.h  sctp_primitives_server.c  sctp_primitives_server.h
src/secu/: CMakeLists.txt  kdf.c  key_nas_deriver.c  nas_stream_eea1.c  nas_stream_eea2.c  nas_stream_eia1.c  nas_stream_eia2.c  rijndael.c  rijndael.h  secu_defs.h  snow3g.c  snow3g.h
src/service303/: CMakeLists.txt  service303.cpp  service303.h  service303_mme_stats.c  service303_spgw_stats.c  service303_task.c
src/sgw/: CMakeLists.txt  mobilityd_ue_ip_address_alloc.c  pgw_config.c  pgw_config.h  pgw_lite_paa.c  pgw_lite_paa.h  pgw_pcef_emulation.c  pgw_pcef_emulation.h  pgw_procedures.c  pgw_ue_ip_address_alloc.h  sgw.h  sgw_config.c  sgw_config.h  sgw_context_manager.c  sgw_context_manager.h  sgw_handlers.c  sgw_handlers.h  sgw_ie_defs.h  sgw_paging.c  sgw_paging.h  sgw_task.c  spgw_config.c  spgw_config.h
src/test/: CMakeLists.txt  auth_request.c  mme_app_driver.py  oaisim_mme_client_test.c  oaisim_mme_itti_test.c  oaisim_mme_list_benchmark.c  oaisim_mme_s1ap_test.c  oaisim_mme_sctp_test.c  test_aes128_cmac_encrypt.c  test_aes128_ctr_decrypt.c  test_aes128_ctr_encrypt.c  test_e2e_mme_startup.py  test_kdf.c  test_mme_app_ue_context.c  test_s1ap.c  test_secu.c  test_secu_kenb.c  test_secu_knas.c  test_secu_knas_encrypt_eea1.c  test_secu_knas_encrypt_eea2.c  test_secu_knas_encrypt_eia1.c  test_secu_knas_encrypt_eia2.c  test_secu_knas_stream_int.c
src/udp/: CMakeLists.txt  udp_primitives_server.c
src/utils/: CMakeLists.txt  async_system.c  conversions.c  conversions.h  digest.c  digest.h  dynamic_memory_check.c  dynamic_memory_check.h  enum_string.h  log.c  log.h  mme_default_values.h  pid_file.c  pid_file.h  shared_ts_log.c
(+2264 files in other folders)
